# trust-sdk-android

./: .gitcommit  .gitignore  CONTRIBUTING.md  README.md  build.gradle  run-instrumentation-tests.sh  settings.gradle
miracl-sdk/: CMakeLists.txt  build.gradle  gradle.properties  side-by-side.md
miracl-sdk/api/: miracl-sdk.api
miracl-sdk/schemas/com.miracl.trust.storage.room.UserDatabase/: 1.json  2.json  3.json  4.json
miracl-sdk/src/androidTest/: AndroidManifest.xml
miracl-sdk/src/androidTest/java/com/miracl/trust/: MIRACLTrustJavaTest.java
miracl-sdk/src/androidTest/java/com/miracl/trust/authentication/: AppLinkAuthenticationTest.kt  AuthenticationTest.kt  NotificationAuthenticationTest.kt  QRAuthenticationTest.kt
miracl-sdk/src/androidTest/java/com/miracl/trust/registration/: QuickCodeGenerationTest.kt  RegistrationTest.kt  VerificationTest.kt
miracl-sdk/src/androidTest/java/com/miracl/trust/session/: CrossDeviceSessionManagementTest.kt  SessionManagerTest.kt  SigningSessionManagerTest.kt
miracl-sdk/src/androidTest/java/com/miracl/trust/signing/: DocumentSigningTest.kt
miracl-sdk/src/androidTest/java/com/miracl/trust/storage/: DatabaseModuleTest.kt  KeyProviderTest.kt  MigrationTest.kt  UserDaoTest.kt
miracl-sdk/src/androidTest/java/com/miracl/trust/utilities/: JwtHelper.kt  MIRACLService.kt  (+2 more)
miracl-sdk/src/main/cpp/: crypto.c
miracl-sdk/src/main/java/com/miracl/trust/: MIRACLResult.kt  MIRACLTrust.kt  MIRACLTrustAuthenticatorApi.kt  MIRACLTrustCore.kt
miracl-sdk/src/test/java/com/miracl/trust/: MIRACLTrustUnitTest.kt  Utilities.kt
(+116 files in other folders)
